--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,4 +1,5 @@
-
-// ozgaruvchilar uchun
-
-// $--main-color: #fff;
+$--main-font-family: 'Raleway', sans-serif;
+$--main-background-color: #E0BEA2;
+$--active-background-color: #CCA88A;
+$--main-color: #252525;
+$--text-color: #fff;
