--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -24,6 +24,12 @@ body {
     padding: 0 20px;
 }
 
+button {
+    cursor: pointer;
+    border: none;
+    background-color: transparent;
+}
+
 .visually-hidden {
     position: absolute !important;
     clip: rect(1px 1px 1px 1px);
